# teste-saif

./: .env.example  .gitignore  README.md  index.html  style.css
.github/workflows/: mobile-ci.yml  pipeline.yml  supabase-migrate.yml  web-ci.yml
CLI Terminal Dashboard(1)/: README.md  index.html  package-lock.json  package.json
cyberpunk/: contexto2.md
data/: README.md
deadsec/: contexto3.md
js/: main.js
js/core/: App.js
js/data/: MockData.js
js/map/: MarkerManager.js  RouteManager.js  TacticalMap.js
js/ui/: AlertSystem.js  BootScreen.js  HUDController.js
mobile/: App.tsx  README.md  app.json  package.json
new-era/: Contém uma imagem de:.desktop  jpeg(2)  jpeg(4)
pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/notebooks/: 01_exploracao.ipynb  02_limpeza.ipynb  03_kde_heatmap.ipynb
pipeline/saifen_pipeline/: __init__.py  cleaner.py  config.py  exporter.py  kde.py  loader.py
pipeline/saifen_pipeline/integrations/: __init__.py  supabase.py
pipeline/scripts/: generate_heatmap.py  process_xlsx.py  push_to_supabase.py  run_pipeline.py
pipeline/tests/: test_cleaner.py
ruffles/macroblank/: contexto1.md
ruffles/new-era/: Contém uma imagem de: low-frequency-sine-waves-on-oscilloscope-dorling-kindersleyuig.jpg | Are.na.desktop  Contém uma imagem de:-1.desktop
shared/: README.md  summary.json
shared/heatmaps/: crimes.geojson  heatmap_points.json  heatmap_points__furto.json  heatmap_points__outros.json  heatmap_points__roubo.json
supabase/: README.md  config.toml  seed.sql
tools/: README.md  dev-web.sh  run-pipeline.sh  start.sh
web/: README.md  index.html  style.css
web/src/: main.js
(+34 files in other folders)
