[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saifen-pipeline"
version = "0.1.0"
description = "SAIFEN — Urban risk analysis pipeline (SSP-SP xlsx → KDE heatmap artifacts)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SAIFEN team" }]
keywords = ["geospatial", "kde", "heatmap", "ssp-sp", "ifood"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.0",
    "scipy>=1.10.0",
    "shapely>=2.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]
supabase = ["supabase>=2.0.0"]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
dev = ["ruff>=0.5.0", "saifen-pipeline[notebooks,supabase,test]"]

[project.scripts]
saifen-pipeline    = "saifen_pipeline.scripts.run_pipeline:main"
saifen-process     = "saifen_pipeline.scripts.process_xlsx:main"
saifen-heatmap     = "saifen_pipeline.scripts.generate_heatmap:main"
saifen-supabase    = "saifen_pipeline.scripts.push_to_supabase:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["saifen_pipeline*"]
exclude = ["tests*", "notebooks*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
